Closed
Bug 403262
Opened 17 years ago
Closed 17 years ago
ARIA Tree Views do not display the proper number of "similar items in group."
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: dipalerm, Assigned: aaronlev)
References
(Blocks 1 open bug)
Details
(Keywords: access)
Attachments
(1 file)
1.78 KB,
patch
|
surkov
:
review+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a9pre) Gecko/2007110405 Minefield/3.0a9pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a9pre) Gecko/2007110405 Minefield/3.0a9pre
Open a page with an ARIA Tree View. Focus on a tree view item and note that the IA2 similar items in group is always 1 less than the total items.
Reproducible: Always
Steps to Reproduce:
1.Open a page with an ARIA Tree View.
2.Focus on a tree view item.
3.Use the Inspect program to observe IA2 properties.
4.Under IAccessible2>Group Position>similarItemsInGroup, the value is always 1 less than the total.
Expected Results:
This was compared to the same properties in Lotus Symphony, which is also IA2 enabled and, in that program, the number always matches the total.
The JAWS screen reader is already set up for that property and so it announces the wrong n of m info in Firefox.
Assignee | ||
Updated•17 years ago
|
Assignee: nobody → aaronleventhal
Blocks: fox3access
Component: Disability Access → Disability Access APIs
Keywords: access
Product: Firefox → Core
QA Contact: disability.access → accessibility-apis
Assignee | ||
Comment 1•17 years ago
|
||
Attachment #288261 -
Flags: review?(surkov.alexander)
Comment 2•17 years ago
|
||
Comment on attachment 288261 [details] [diff] [review]
grouPosition()'s similarItemsInGroup should be 1-based
r=me
Attachment #288261 -
Flags: review?(surkov.alexander) → review+
Updated•17 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Assignee | ||
Updated•17 years ago
|
Attachment #288261 -
Flags: approval1.9?
Updated•17 years ago
|
Attachment #288261 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Updated•17 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•