Bug 403262. nsIAccessible::groupPositioN() does not expose the proper number of similar items in group. r=surkov, a=mtschrep